--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,26 @@ nltk
 regex
 scikit-learn
 from-root
+python-box==6.0.2
+PyYAML
+boto3
+mypy-boto3-s3
+ensure==1.0.2
+py7zr
+pandas
+nltk
+tqdm
+PyYAML
+matplotlib
+torch
+notebook
+boto3
+mypy-boto3-s3
+python-box==6.0.2
+ensure==1.0.2
+fastapi==0.78.0
+uvicorn==0.18.3
+Jinja2==3.1.2
 google-cloud-storage
 fastapi==0.78.0
 uvicorn==0.18.3
